sample app-nginx/02-nginx-srvc.yaml
kind: Service
apiVersion: v1
metadata:
  name: srvclb-ngnx
spec:
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
      #  type: LoadBalancer
