sample app-nginx/nginx-lbsvc.yaml
{\rtf1\ansi\ansicpg1252\cocoartf2761
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\froman\fcharset0 Times-Roman;}
{\colortbl;\red255\green255\blue255;\red0\green0\blue1;\red0\green0\blue0;}
{\*\expandedcolortbl;;\cssrgb\c0\c0\c392;\cssrgb\c0\c0\c0;}
\paperw11900\paperh16840\margl1440\margr1440\vieww16160\viewh10220\viewkind0
\deftab720
\pard\pardeftab720\partightenfactor0

\f0\fs21\fsmilli10667 \cf2 \expnd0\expndtw0\kerning0
kind: Service
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 apiVersion: v1
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 metadata:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 name: srvclb-ngnx
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 spec:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 selector:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0 app: hello
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0 tier: frontend
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 ports:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 - protocol: "TCP"
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0 port: 80
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0 targetPort: 80
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 type: LoadBalancer
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 ---
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 apiVersion: apps/v1
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 kind: Deployment
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 metadata:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 name: loadbalancer
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 spec:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 replicas: 2
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 selector:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0 matchLabels:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0\'a0\'a0 app: hello
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0 template:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0 metadata:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0\'a0\'a0 labels:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0\'a0\'a0\'a0\'a0 app: hello
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0\'a0\'a0\'a0\'a0 tier: frontend
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0 spec:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0\'a0\'a0 containers:
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0\'a0\'a0 - name: nginx
\fs24 \cf0 \

\fs21\fsmilli10667 \cf2 \'a0\'a0\'a0\'a0\'a0\'a0\'a0 image: "nginxdemos/hello"
\fs24 \cf0 \
}
